--- a/web/css140307/common.css
+++ b/web/css140307/common.css
@@ -31,7 +31,7 @@
 .lh28{ line-height:28px;}
 .lh32{ line-height:32px;}
 h5{font-size: 1.17em;font-weight: bold;}
-strong, b{font-weight: bold;}
+strong, b, .strong{font-weight: bold;}
 .corBlack{ color:#000!important;}
 .corLightRed{ color:#ff6b4f;}
 .corLightGray{ color:#999;}
