--- a/src/Jili/ApiBundle/Resources/views/User/regSuccess.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/regSuccess.html.twig
@@ -12,6 +12,7 @@
 <link href="{{ asset('css/regStep.css')}}" rel="stylesheet" type="text/css" />
 <script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
 <script src="{{ asset('js/banner.js')}}" type="text/javascript"></script>
+<script type="text/javascript"> var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://"); document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F77b96def0542ee8cdb59ee6ad43bec5f' type='text/javascript'%3E%3C/script%3E")); </script> 
 </head>
 <body>
 {% include 'JiliApiBundle::userHead.html.twig' %}
