#448 user login link fixed

--- a/src/Jili/FrontendBundle/Resources/views/Landing/external_landing.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/Landing/external_landing.html.twig
@@ -25,7 +25,7 @@
 <body>
     <header>
         <a href="{{ path('_homepage') }}"><img src="{{ asset('images1408/lp/logo.png') }}" width="160" height="46" alt="91积粒网" title="91积粒网"/></a>
-        <span class="tips">已有积粒网账号，<a href="{{ path('_user_reg') }}">直接登录</a></span>
+        <span class="tips">已有积粒网账号，<a href="{{ path('_user_login') }}">直接登录</a></span>
     </header>
     <div class="loginNewBox">
         <div class="loginMask"></div>
