--- a/src/Jili/ApiBundle/Resources/views/MonthActivity/cpaRankingActivity.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/MonthActivity/cpaRankingActivity.html.twig
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 {% include 'JiliApiBundle::seo.html.twig' %}
-<title>积粒网—中秋献，【抢排名，赢现金】第二波疯狂来袭</title>
+<title>积粒网—中秋献礼，【抢排名，赢现金】第二波疯狂来袭</title>
 <link href="{{ asset('css140307/common.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{ asset('css/jl.ui.Sep.css')}}" rel="stylesheet" type="text/css" />
 <script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
