--- a/src/Jili/EmarBundle/Resources/views/Websites/detail.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/detail.html.twig
@@ -83,7 +83,7 @@
 
   <div class="sidebar w154 fr">
 
-  <!--<div class="busiSec">
+  <div class="busiSec">
     <h3 class="busiSecTit">同类商家推荐</h3>
     <div class="busiSecBd">
       <ul id="mallsRecommend">
@@ -98,7 +98,7 @@
         {% endfor %}
 	  </ul>
     </div>
-  </div>-->
+  </div>
 
   <div class="rebateProcess borderGlob">
     	<h3>返利流程</h3>	
