--- a/src/Jili/FrontendBundle/Resources/views/Home/index.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/Home/index.html.twig
@@ -35,7 +35,7 @@
         {% else %}
             {{ render(controller('JiliApiBundle:Top:userInfo' ) ) }}
         {% endif %}
-        <div class="quickQ">
+        <div class="quickQ shadowGlob">
             {{ render(controller('JiliFrontendBundle:Home:vote' ) ) }}{# 快速问答#}
         </div>
         <div class="notice shadowGlob">
@@ -43,7 +43,7 @@
             {{ render(controller('JiliApiBundle:Top:callboard' ) ) }}
             <div class="pageNumber"><a class="prevBtn curPt"></a><span></span><a class="nextBtn curPt"></a></div>
         </div>
-        <div class="mt10" style="background: none;">
+        <div class="mt10" style="background: none; padding-left: 0; padding-bottom: 0;">
         	<!-- 首页 右侧一 标签云（改） -->
         	{% include "JiliApiBundle:Ads:cpro_baidu.html.twig" with { cpro_id:"u1650575" } %}
         </div>
