--- a/web/css140307/common.css
+++ b/web/css140307/common.css
@@ -19,6 +19,7 @@
 .fontNormal{ font-weight:normal; font-size:12px;}
 .fontYH{ font-family:'Microsoft YaHei',sans-serif;}
 .fon700{ font-weight:700;}
+.font13{ font-size:13px;}
 .font14{ font-size:14px;}
 .font15{ font-size:15px;}
 .font16{ font-size:16px;}
