首页样式修改 #461

--- a/src/Jili/ApiBundle/Resources/views/Top/ranking.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Top/ranking.html.twig
@@ -4,7 +4,7 @@
     {% for item in rankingMonth %}
     <li>
       <em {% if loop.index < 4 %} class="redBg" {% endif %}>{{ loop.index }}</em>
-      <dd>{{ item.0[:12] }}</dd>
+      <dd>{{ item.0[:3] }}**</dd>
       <dt><span>{{ item.1 }}</span>累计米粒</dt>
     </li>
     {% endfor %}
@@ -13,7 +13,7 @@
     {% for item in rankingYear %}
     <li>
       <em {% if loop.index < 4 %} class="redBg" {% endif %}>{{ loop.index }}</em>
-      <dd>{{ item.0[:12] }}</dd>
+      <dd>{{ item.0[:3] }}**</dd>
       <dt><span>{{ item.1 }}</span>累计米粒</dt>
     </li>
     {% endfor %}
