--- a/src/Jili/BackendBundle/Resources/views/ExperienceAdvertisement/experienceAdvertisementList.html.twig
+++ b/src/Jili/BackendBundle/Resources/views/ExperienceAdvertisement/experienceAdvertisementList.html.twig
@@ -5,9 +5,7 @@
 <LINK href="{{ asset('css/admin.css')}}" type="text/css" rel="stylesheet">
 <LINK href="{{ asset('css/calendar.css')}}" type=text/css rel=stylesheet>
 <script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
-<SCRIPT src="{{ asset('js/load.js')}}" type=text/javascript></SCRIPT>
-<script src="{{ asset('js/My97DatePicker/WdatePicker.js')}}" type="text/javascript"></script>
-<script src="{{ asset('js/kindeditor/kindeditor.js')}}" type="text/javascript"></script>
+<script src="{{ asset('js/load.js')}}" type=text/javascript></script>
 
 </HEAD>
 <BODY>
