--- a/src/Jili/ApiBundle/Resources/views/Top/checkIn.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Top/checkIn.html.twig
@@ -5,6 +5,8 @@
 {% block javascript %}
 <script src="{{ asset('js1408/checkin.js') }}" language="javascript"></script>
 <script src="{{ asset('js/signIn.js')}}" type="text/javascript"></script>
+<script src="{{ asset('bundles/jilifrontend/js/auto_checkin.js')}}" type="text/javascript"></script>
+
 {% endblock %}
 
 <div id="signInFrame" style="display:none;">
@@ -19,4 +21,41 @@
       </a></li>
     {% endfor %}
     </ul>
+<div>
+
+{% if is_auto_checkin is not defined  %}
+<a href="#" class="set-autocheckin create"  id='set_autocheckin'>set Auto-Checkin</a>
+{% elseif is_auto_checkin == false %}
+<a href="#" class="set-autocheckin update" id='set_autocheckin'>Reset Auto-Checkin</a>
+{% elseif is_auto_checkin == true %}
+
+<a href="#" class="set-autocheckin delete" id='set_autocheckin'>Quit Auto-Checkin</a>
+{% endif %}
+
 </div>
+
+</div>
+
+<script type="text/javascript">
+var jili_autocheckin = jili_autocheckin || {};
+jili_autocheckin.advertiserments = {{ arrList|json_encode()|raw  }};
+jili_autocheckin.checkin_point = {{ checkinPoint|raw  }};
+var jili_urls = jili_urls || {};
+jili_urls.autocheckinconfig =  {
+"create": "{{ path('jili_frontend_autocheckinconfig_create') }}",
+"update": "{{ path('jili_frontend_autocheckinconfig_update') }}",
+"delete": "{{ path('jili_frontend_autocheckinconfig_delete') }}",
+};
+
+//$("a.set-autocheckin").onclick = function() {
+//    console.log( "Just For Fun");
+//    return false;
+//}
+
+{% if is_auto_checkin is defined and is_auto_checkin == true %}
+jili_autocheckin.is_set = true;
+{% else  %}
+jili_autocheckin.is_set = false;
+{% endif %}
+</script>
+
