--- a/src/Jili/ApiBundle/Resources/views/Top/checkIn.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Top/checkIn.html.twig
@@ -10,17 +10,32 @@
 {% endblock %}
 
 <div id="signInFrame" style="display:none;">
-  <h5>再打开<span id="remain">3</span>个商城就可以得到<span>{{ checkinPoint }}</span>个米粒</h5>
     <a class="close_checkin">关闭</a>
-    <ul>
-    {% for item in arrList %}
-      <li><a onclick="goto({{ item.cid }},{{ item.id }},{{ checkinPoint }});" class="image{{ item.cid }}"><img src="{{ asset(item.list_image) }}" width="200" height="130" alt="{{ item.title }}"><p>最高返利{{ item.reward_rate }}%</p>
-      <div class="gray"></div>
-      <div class="goTo {{ item.cid }}">点击前往</div>
-      <div class="finish">已打开</div>
-      </a></li>
-    {% endfor %}
-    </ul>
+    <div class="signInCon">
+        <div class="signInOptions"><span class="active">手动签到</span><span class="autoSignIn">我想以后自动签到<a href="javascript:void(0)">详情</a></span><p><strong>自动签到</strong>：选择‘自动签到’以后，点击‘签到’按钮，系统将自动随机选择3-6个商家完成签到</p></div>
+        <div class="signInManual">
+            <p>打开以下<strong>3</strong>个商城就可以得到<strong>1</strong>个米粒！</p>
+            <ul class="clearfix">
+            {% for item in arrList %}
+              <li><a onclick="goto({{ item.cid }},{{ item.id }},{{ checkinPoint }});" class="image{{ item.cid }}"><img src="{{ asset(item.list_image) }}" width="200" height="80" alt="{{ item.title }}"><p>最高返利{{ item.reward_rate }}%</p>
+              <div class="gray"></div>
+              <div class="goTo {{ item.cid }}">点击前往</div>
+              <div class="finish">已打开</div>
+              </a></li>
+            {% endfor %}
+            </ul>
+            <p>系统帮您自动签到中……，请稍后</p>
+        </div>
+    </div>
+    <div class="mask"></div>
+    <div class="signInConfirmFrame signInManualFrame">
+       	<p>确认换回手动签到？</p>
+        <div class="btns"><a href="javascript: void(0)" class="confirm">确定</a><a href="javascript: void(0)">放弃</a></div>
+    </div>
+    <div class="signInConfirmFrame signInAutoFrame">
+       	<p>我想以后点击‘签到’按钮自动完成签到？</p>
+        <div class="btns"><a href="javascript: void(0)" class="confirm">确定</a><a href="javascript: void(0)">放弃</a></div>
+    </div>
 <div>
 
 {% if is_auto_checkin is not defined  %}
