--- a/web/css1408/jl.ui.home.css
+++ b/web/css1408/jl.ui.home.css
@@ -139,7 +139,6 @@ a.more{
 .shopActive .shopMask{
 	width: 119px;
 	height: 70px;
-	/*background-color: rgb(255, 255, 255);*/
     opacity: .8;
     filter: alpha(opacity = 80);
 	border:1px solid #fab627;
@@ -183,6 +182,7 @@ a.more{
 .shopActItem{
 	height: 168px;
 	margin-bottom: 10px;
+	font: 17px/26px 'microsoft yahei',simhei;
 }
 .shopActImg{
 	float: left;
@@ -195,65 +195,94 @@ a.more{
 	border-bottom: 1px solid #f2f2f2;
 	position:relative;
 }
-.shopActInfo strong{
+.shopActInfo .tit .tt{
 	color: #f75232;
-	font-weight: bold;
 	margin-right:5px;
+	font-size:14px;
 }
-.shopActInfo p.tit{
+.shopActInfo .tit{
 	max-height: 50px;
 	height:auto;
 	overflow: hidden;
-	font-weight: bold;
-	font: 17px/26px 'microsoft yahei',simhei;
 }
-.shopActInfo p.dis{
+.shopActInfo .tit .rebate{ 
+	background: #ffa491; 
+	color:#fff; 
+	font-size:11px;
+	position: relative;
+	height: 15px; 
+	line-height:15px; 
+	padding-left:5px; 
+	padding-right:5px; 
+	margin-left:3px; 
+	vertical-align: 1px; 
+	display:inline-block;
+	-moz-border-radius: 0 2px 2px 0; /* Firefox */
+	-webkit-border-radius: 0 2px 2px 0; /* Safari 和 Chrome */
+	border-radius: 0 2px 2px 0; /* Opera 10.5+, 以及使用了IE-CSS3的IE浏览器 */
+}
+.shopActInfo .tit .rebate span{
+	width: 10px;
+	height: 17px;
+	position: absolute;
+	left: -9px;
+	top: 0;
+	*top: 6px;
+	*+top:0;
+	display: inline-block; 
+	background: url(../images1408/icons.png) no-repeat 0 -244px; 
+}
+.shopActInfo .businessName{ 
+	max-height: 30px;
+	height: auto;
+	overflow: hidden;
+	margin-top: 4px;
+}
+.shopActInfo .businessName a{ 
+	color:#101010; 
+	font-weight: bold;
+	font: 18px/26px 'microsoft yahei',simhei;
+}
+.shopActInfo .businessName a:hover{ 
+	text-decoration:underline;
+}
+.shopActInfo .dis{
 	font-size: 12px;
 	color: #999;
-	max-height: 62px;
+	max-height: 60px;
 	height:auto;
 	line-height: 20px;
 	overflow:hidden;
-	margin-top:5px;
+	margin-top:1px;
 }
-.shopActInfo div.link{
-	display: inline-block;
+.shopActInfo .link{
 	margin-top: 35px;
-	float: right;
 	position:absolute;
 	right: 0;
 	bottom: 10px;
-}
-.shopActInfo .publicAttention{
-	color: #999;
-	text-align: right;
-	display:inline;
-	margin-right: 5px;
-}
-.shopActInfo .publicAttention strong{
-	font-family: Georgia, Microsoft Yahei;
-	font-size: 24px;
-	font-weight: normal;
+	width:100%;
 }
 .shopActInfo .linkBtn{
 	text-align: right;
 	margin-top: 15px;
-	display:inline;
+	float:right;
 }
 .shopActInfo .linkBtn a{
-	width: 90px;
-	height: 28px;
-	line-height: 28px;
+	width: 77px;
+	height: 38px;
+	line-height: 38px;
 	font-size: 14px;
 	text-align: center;
-	color: #fff;
-	background-color: #4a8ef3;	
+	color: #6b6b6b;
+	background-color: #ebebeb;	
 }
-span.arrow{
-	width: 20px;
-	height: 10px;
-	background: url(../images1408/icons.png) no-repeat 10px -102px;
-    *margin-bottom: 3px;
+.shopActInfo .publicAttention{ 
+	float:left; 
+	font-size:12px; 
+	color:#999; 
+	font-weight:normal; 
+	background: url(../images1408/icons.png) no-repeat 0 -263px; 
+	padding-left: 15px;
 }
 .rightSider{
 	width:270px;
