--- a/src/Jili/EmarBundle/Resources/views/Websites/detail.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/detail.html.twig
@@ -33,6 +33,9 @@
           <p class="rebate">返利比率：<em>正常商品：7%  团购商品：2%  优惠券、礼品卡商品：4%</em></p>
         </div>
      </div><!-- eof shop-info -->
+     <div class="l834Taobao">
+     	<a data-type="3" data-tmpl="800x90" data-tmplid="195" data-rd="2" data-style="2" data-border="0" href="#"></a>
+     </div><!-- taobao -->
       {% if commission_list %}
       <div class="shopRecommend rebateDetail">
       	<h3>返利详情</h3>
