--- a/src/Jili/ApiBundle/Resources/views/Advertiserment/list.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Advertiserment/list.html.twig
@@ -34,6 +34,7 @@
     </div>
 
   </article>
+  
   {% if ads %}
   <aside class="offowAside">
     <div class="cpaMain">
@@ -55,6 +56,12 @@
      {% endfor %}
         </div>
     </div>
+  </aside>
+  {% else %}
+  <aside class="offowAside">
+      <div>
+      	<a data-type="3" data-tmpl="290x380" data-tmplid="30" data-rd="2" data-style="2" data-border="1" href="#"></a>
+      </div>
   </aside>
   {% endif %}
 </div>
