--- a/src/Jili/EmarBundle/Resources/views/Websites/shopSearch.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/shopSearch.html.twig
@@ -24,7 +24,11 @@
 {% block body %}
 <div class="main w834 fl"> {# include( "JiliEmarBundle:Websites:shopSearch_category.html.twig") #}
   
-  {{ include( "JiliEmarBundle:Websites:shopSearch_page.html.twig") }} </div>
+  {{ include( "JiliEmarBundle:Websites:shopSearch_page.html.twig") }} 
+    <div class="l834Taobao">
+        <a data-type="3" data-tmpl="800x90" data-tmplid="195" data-rd="2" data-style="2" data-border="0" href="#"></a>
+    </div>
+</div>
 <!-- eof main-->
 
 <div class="sidebar fr" style=" width: 155px; height:210px;">
