--- a/src/Jili/FrontendBundle/Resources/views/Home/index.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/Home/index.html.twig
@@ -45,7 +45,7 @@
             {{ render(controller('JiliApiBundle:Top:callboard' ) ) }}
             <div class="pageNumber"><a class="prevBtn curPt"></a><span></span><a class="nextBtn curPt"></a></div>
         </div>
-        <div class="mt10">
+        <div class="topTaobao mt10">
             <a data-type="3" data-tmpl="265x240" data-tmplid="182" data-rd="2" data-style="2" data-border="1" href="#"></a>
         </div>
         <div class="mt10" style="background: none; padding-left: 0; padding-bottom: 0;">
