--- a/src/Jili/FrontendBundle/Resources/views/base.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/base.html.twig
@@ -19,6 +19,8 @@
 <script src="{{ asset('js/html5.js')}}" type="text/javascript"></script> 
 <!-- [endif] --> 
 <script src="{{ asset('js/jquery-1.7.js') }}" language="javascript"></script>
+<script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
+<script src="{{ path('fos_js_routing_js', {"callback": "fos.Router.setData"}) }}"></script>
 <script src="{{ asset('js/help.js')}}" type="text/javascript"></script> 
 <script src="{{ asset('js140307/common.js') }}" language="javascript"></script>
 <script src="{{ asset('js1408/jl.ui.header.js') }}" language="javascript"></script>
