--- a/src/Jili/BackendBundle/Resources/views/ExperienceAdvertisement/experienceAdvertisementList.html.twig
+++ b/src/Jili/BackendBundle/Resources/views/ExperienceAdvertisement/experienceAdvertisementList.html.twig
@@ -31,7 +31,11 @@
           </td>
           <td align="center"> <img src="{{ asset(item.missionImgUrl) }}"/> </td>
           <td align="center">{{ item.point }}</td>
-          <td align="center">{{ item.updateTime.date | date("Y-m-d hh:M:S") }}</td>
+          <td align="center">
+              {% if item.updateTime %}
+                  {{ item.updateTime.date | date("Y-m-d hh:M:S") }}
+              {% endif %}
+          </td>
           <td align="center"><a href="{{ path('_bankend_editExperienceAdvertisement',{'id':item.id}) }}">编辑</a>&nbsp;&nbsp;
           <a href="{{ path('_backend_delExperienceAdvertisement',{'id':item.id}) }}" onclick="if (confirm('确定要删除吗？')) return true; else return false;">删除</a>
         </td>
