--- a/src/Jili/ApiBundle/Resources/views/Top/checkIn.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Top/checkIn.html.twig
@@ -59,6 +59,7 @@
 var jili_autocheckin = jili_autocheckin || {};
 jili_autocheckin.advertiserments = {{ arrList|json_encode()|raw  }};
 jili_autocheckin.checkin_point = {{ checkinPoint|raw  }};
+jili_autocheckin.is_request = {{   app.request.get('auto_checkin', 0 )  ? 1 : 0  }};
 
 // var jili_urls = jili_urls || {};
 // jili_urls.autocheckinconfig =  {
