--- a/src/Jili/ApiBundle/Resources/views/Top/checkIn.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Top/checkIn.html.twig
@@ -7,6 +7,11 @@
 <script src="{{ asset('js/signIn.js')}}" type="text/javascript"></script>
 <script src="{{ asset('bundles/jilifrontend/js/auto_checkin.js')}}" type="text/javascript"></script>
 
+{# 当请求参数中有 auto_checkin = 1时, ajax取当前的 user_config #}
+{% if app.request.get('auto_checkin', 0 ) ==  1 %}
+<script src="{{ asset('bundles/jilifrontend/js/auto_checkin_process.js')}}" type="text/javascript"></script>
+{% endif %}
+
 {% endblock %}
 <!-- set-autocheckin create"  id='set_autocheckin -->
 <div id="signInFrame" style="display:none;">
@@ -60,6 +65,7 @@ var jili_autocheckin = jili_autocheckin || {};
 jili_autocheckin.advertiserments = {{ arrList|json_encode()|raw  }};
 jili_autocheckin.checkin_point = {{ checkinPoint|raw  }};
 jili_autocheckin.is_request = {{   app.request.get('auto_checkin', 0 )  ? 1 : 0  }};
+// jili_autocheckin.is_config = {{ is_autocheckin_config|default(0) }};
 
 // var jili_urls = jili_urls || {};
 // jili_urls.autocheckinconfig =  {
@@ -78,4 +84,5 @@ jili_autocheckin.is_request = {{   app.request.get('auto_checkin', 0 )  ? 1 : 0 
 // {% else  %}
 // jili_autocheckin.is_set = false;
 // {% endif %}
+
 </script>
