首页商家活动加“最高返利***” #476

--- a/web/css1408/jl.ui.home.css
+++ b/web/css1408/jl.ui.home.css
@@ -198,7 +198,7 @@ a.more{
 .shopActInfo .tit .tt{
 	color: #f75232;
 	margin-right:5px;
-	font-size:14px;
+	font-size:18px;
 }
 .shopActInfo .tit{
 	max-height: 50px;
@@ -277,7 +277,7 @@ a.more{
 	background-color: #ebebeb;	
 }
 .shopActInfo .publicAttention{ 
-	float:left; 
+	float:right; 
 	font-size:12px; 
 	color:#999; 
 	font-weight:normal; 
