--- a/src/Jili/ApiBundle/Resources/views/User/regSuccess.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/regSuccess.html.twig
@@ -26,7 +26,10 @@
         <h2>恭喜，您已注册成功！</h2>
 {% endfor %}
         <p>进入 <a href="{{ path('_homepage') }}">首页</a> / <a href="{{ path('_user_info') }}">个人中心</a> / <a href="{{ path('_default_support')}}">帮助中心</a> / <a href="{{ path('_advertiserment_list')}}">直接去参加广告体验</a>
-        <script type="text/javascript"> var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://"); document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F45337bc7a7bfd40d9596eb047ee1293b' type='text/javascript'%3E%3C/script%3E")); </script> 
+        <script type="text/javascript">
+            var _bdhmProtocol = (("https:" == document.location.protocol) ? "https://" : "http://");
+            document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F45337bc7a7bfd40d9596eb047ee1293b' type='text/javascript'%3E%3C/script%3E")); 
+        </script> 
         </p>
         </div>
     </div>
